--- a/staging/src/k8s.io/client-go/listers/networking/v1/BUILD
+++ b/staging/src/k8s.io/client-go/listers/networking/v1/BUILD
@@ -9,6 +9,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "expansion_generated.go",
+        "ingress.go",
         "networkpolicy.go",
     ],
     importmap = "k8s.io/kubernetes/vendor/k8s.io/client-go/listers/networking/v1",
